...
            android:layout_height="wrap_content"
            android:text="Edit"
            android:backgroundTint="#5E38A3"
            android:textSize="20dp"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:id="@+id/editB"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="Delete"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:backgroundTint="#1C2A77"
            android:textSize="20dp"
            android:id="@+id/deleteB"/>
    </LinearLayout>

</LinearLayout>
