...
            android:layout_height="wrap_content"
            android:text="Add"
            android:backgroundTint="#5E38A3"
            android:textSize="20dp"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:id="@+id/addM"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:padding="10dp"
            android:layout_margin="10dp"
...
